--- a/newpost.html
+++ b/newpost.html
@@ -25,109 +25,114 @@
         input[type=submit]:hover {
           background-color: darkred;
         }
-        
-        div {
-          border-radius: 5px;
-          background-color: #f2f2f2;
-          padding: 20px;
-        }
-        </style>
+    </style>
+
     <head>
         <link rel="stylesheet" type="text/css" href="style.css" >
         <title>
             New Post
         </title>
     </head> 
+
+    <div class="navbar">
+      <div class="RatePEA">
+        <a class = "active" href="#RatePEA">RatePEA</a>
+      </div>
+
+      <div class="subnav">
+        <button class="subnavbtn">Art</button>
+        <div class="subnav-content">
+            <a href="#a2">200s</a>
+            <a href="#a3">300s</a>
+            <a href="#a4">400s</a>
+            <a href="#a5">500s</a>
+            <a href="#ao">Others</a>
+        </div>
+      </div>
+
+      <div class="subnav">
+        <button class="subnavbtn">English</button>
+        <div class="subnav-content">
+          <a href="#eg">General</a>
+          <a href="#ee">Electives</a>
+        </div>
+      </div>
+
+      <div class="subnav">
+        <button class="subnavbtn">History</button>
+        <div class="subnav-content">
+            <a href="#h2">200s</a>
+            <a href="#h3">300s</a>
+            <a href="#hus">US History</a>
+            <a href="#h5">500s</a>
+            <a href="#ho">Others</a>
+        </div>
+      </div>
+
+      <div class="subnav">
+        <button class="subnavbtn">Langauge</i></button>
+        <div class="subnav-content">
+          <a href="#lspa">Spanish</a>
+          <a href="#lfre">French</a>
+          <a href="#lman">Mandarin</a>
+          <a href="#lger">German</a>
+          <a href="#ljap">Japanese</a>
+          <a href="#lrus">Russian</a>
+          <a href="#lita">Italian</a>
+          <a href="#lara">Arabic</a>
+          <a href="#llat">Latin</a>
+          <a href="#lgre">Classical Greek</a>
+        </div>
+      </div>
+
+      <div class="subnav">
+        <button class="subnavbtn">Math</button>
+        <div class="subnav-content">
+          <a href="#m1">100s</a>
+          <a href="#m2">200s</a>
+          <a href="#m3">300s</a>
+          <a href="#m4">400s</a>
+          <a href="#m5">500s</a>
+          <a href="#me">Electives</a>
+        </div>
+      </div>
+
+      <div class="subnav">
+        <button class="subnavbtn">Religion</button>
+        <div class="subnav-content">
+          <a href="#r2">200s</a>
+          <a href="#r3">300s</a>
+          <a href="#r4">400s</a>
+          <a href="#r5">500s</a>
+          <a href="#ro">Others</a>
+        </div>
+      </div>
+
+      <div class="subnav">
+        <button class="subnavbtn">Science</button>
+        <div class="subnav-content">
+          <a href="#sbio">Biology</a>
+          <a href="#schem">Chemestry</a>
+          <a href="#sphy">Physics</a>
+          <a href="#scs">CompSci</a>
+        </div>
+      </div>
+
+    </div>
+
     <body>
-        <div class="navbar">
-            <div class="RatePEA">
-            <a href="#RatePEA">RatePEA</a>
-            </div>
-            <div class="subnav">
-              <button class="subnavbtn">Art</button>
-              <div class="subnav-content">
-                  <a href="#a2">200s</a>
-                  <a href="#a3">300s</a>
-                  <a href="#a4">400s</a>
-                  <a href="#a5">500s</a>
-                  <a href="#ao">Others</a>
-              </div>
-            </div>
-            <div class="subnav">
-              <button class="subnavbtn">English</button>
-              <div class="subnav-content">
-                <a href="#eg">General</a>
-                <a href="#ee">Electives</a>
-              </div>
-            </div>
-            <div class="subnav">
-              <button class="subnavbtn">History</button>
-              <div class="subnav-content">
-                  <a href="#h2">200s</a>
-                  <a href="#h3">300s</a>
-                  <a href="#hus">US History</a>
-                  <a href="#h5">500s</a>
-                  <a href="#ho">Others</a>
-              </div>
-            </div>
-            <div class="subnav">
-              <button class="subnavbtn">Langauge</i></button>
-              <div class="subnav-content">
-                <a href="#lspa">Spanish</a>
-                <a href="#lfre">French</a>
-                <a href="#lman">Mandarin</a>
-                <a href="#lger">German</a>
-                <a href="#ljap">Japanese</a>
-                <a href="#lrus">Russian</a>
-                <a href="#lita">Italian</a>
-                <a href="#lara">Arabic</a>
-                <a href="#llat">Latin</a>
-                <a href="#lgre">Classical Greek</a>
-              </div>
-            </div>
-            <div class="subnav">
-              <button class="subnavbtn">Math</button>
-              <div class="subnav-content">
-                <a href="#m1">100s</a>
-                <a href="#m2">200s</a>
-                <a href="#m3">300s</a>
-                <a href="#m4">400s</a>
-                <a href="#m5">500s</a>
-                <a href="#me">Electives</a>
-              </div>
-            </div>
-            <div class="subnav">
-              <button class="subnavbtn">Religion</button>
-              <div class="subnav-content">
-                <a href="#r2">200s</a>
-                <a href="#r3">300s</a>
-                <a href="#r4">400s</a>
-                <a href="#r5">500s</a>
-                <a href="#ro">Others</a>
-              </div>
-            </div>
-            <div class="subnav">
-              <button class="subnavbtn">Science</button>
-              <div class="subnav-content">
-                <a href="#sbio">Biology</a>
-                <a href="#schem">Chemestry</a>
-                <a href="#sphy">Physics</a>
-                <a href="#scs">CompSci</a>
-              </div>
-            </div>
-          </div>
         <h1>
-            create a new post
+            Post a Course Review!
         </h1>
         <div>
             <form action="/action_page.php">
-                <label for="username">username</label>
-                <input type="text" id="username" name="username" placeholder="create a username">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" placeholder="Enter a Username">
 
-                <label for="coursecode">course code</label>
-                <input type="text" id="coursecode" name="coursecode" placeholder="enter course code as it appears in the course catalog">
+                <label for="coursecode">Course Code</label>
+                <input type="text" id="coursecode" name="coursecode" placeholder="Enter course code as it appears in the course catalog">
 
-                <label for="term">term when took the course</label>
+                <label for="term">Term Taken </label>
                 <select id="term" name="term">
                     <option value="fall2020">Fall 2020</option>
                     <option value="winter2020">Winter 2020</option>
@@ -139,8 +144,18 @@
                     <option value="winter2022">Winter 2022</option>
                     <option value="spring2023">Spring 2023</option>
                 </select>
-                <label for="teachername">teacher's first and last name</label>
-                <input type="text" id="teachername" name="teachername" placeholder="enter your teacher's full name">
+
+                <label for="teachername">Teacher's first and last name</label>
+                <input type="text" id="teachername" name="teachername" placeholder="Enter your teacher's full name">
+                
+                <label for="rating">Rating</label>
+                <input type="text" id="rating" name="rating" placeholder="How many stars out of 5 would you rate this course">
+
+
+                <label for="review">Review</label>
+                <input type="text" id="review" name="review" placeholder="What did you think of the course? Would you suggest it to others?">
+
+
                 <input type="submit" value="Submit">
             </form>
         </div>
