--- a/newpost.html
+++ b/newpost.html
@@ -103,11 +103,11 @@
                 <tr>
                 <th><label class="labelsf" for="username">Username</label>
                 <input type="text" id="username" name="username" placeholder="Create a username ...">
-                </th>
+                </th><br><br>
                 <th>
-                <label class="labelsf" for="coursecode">Course code</label>
-                <input type="text" id="coursecode" name="coursecode" placeholder="Course code as it appears in the course catalog ...">
-                </th>
+                <label class="labelsf" for="coursecode">Course ID</label>
+                <input type="text" id="coursecode" name="coursecode" placeholder="Same as in the course catalog...">
+                </th><br><br>
                 </tr>
                 <tr>
                 <th>
@@ -123,14 +123,14 @@
                     <option value="fall2022">Fall 2022</option>
                     <option value="winter2022">Winter 2022-2023</option>
                     <option value="spring2023">Spring 2023</option>
-                </div>
+                </div><br><br>
                 </th>
                 </select>
                 </tr>
                 <tr>
                 <th>
                 <label class="labelsf" for="teachername">Teacher's first and last name</label>
-                <input type="text" id="teachername" name="teachername" placeholder="Your teacher's full name ...">
+                <input type="text" id="teachername" name="teachername" placeholder="Enter name...">
                 </th>
                 <th>
                 <label class="labelsf" for="rating">Course Rating</label>
