--- a/course.html
+++ b/course.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <!-- Setting CSS and title -->
     <head>
         <link rel="stylesheet" href="style.css" >
             <title>
@@ -7,95 +8,142 @@
             </title>
     </head>
 
+    <!-- Navbar stuff: Same on all tabs -->
     <div class="navbar">
-      <div class="navbar">
-        <div class="RatePEA">
-          <a class = "active" href="#RatePEA">RatePEA</a>
-        </div>
-
-        <div class="subnav">
-          <button class="subnavbtn">Art</button>
-          <div class="subnav-content">
-              <a href="#a2">200s</a>
-              <a href="#a3">300s</a>
-              <a href="#a4">400s</a>
-              <a href="#a5">500s</a>
-              <a href="#ao">Others</a>
-          </div>
-        </div>
-
-        <div class="subnav">
-          <button class="subnavbtn">English</button>
-          <div class="subnav-content">
-            <a href="#eg">General</a>
-            <a href="#ee">Electives</a>
-          </div>
-        </div>
-
-        <div class="subnav">
-          <button class="subnavbtn">History</button>
-          <div class="subnav-content">
-              <a href="#h2">200s</a>
-              <a href="#h3">300s</a>
-              <a href="#hus">US History</a>
-              <a href="#h5">500s</a>
-              <a href="#ho">Others</a>
-          </div>
-        </div>
-
-        <div class="subnav">
-          <button class="subnavbtn">Langauge</i></button>
-          <div class="subnav-content">
-            <a href="#lspa">Spanish</a>
-            <a href="#lfre">French</a>
-            <a href="#lman">Mandarin</a>
-            <a href="#lger">German</a>
-            <a href="#ljap">Japanese</a>
-            <a href="#lrus">Russian</a>
-            <a href="#lita">Italian</a>
-            <a href="#lara">Arabic</a>
-            <a href="#llat">Latin</a>
-            <a href="#lgre">Classical Greek</a>
-          </div>
-        </div>
-
-        <div class="subnav">
-          <button class="subnavbtn">Math</button>
-          <div class="subnav-content">
-            <a href="#m1">100s</a>
-            <a href="#m2">200s</a>
-            <a href="#m3">300s</a>
-            <a href="#m4">400s</a>
-            <a href="#m5">500s</a>
-            <a href="#me">Electives</a>
-          </div>
-        </div>
-
-        <div class="subnav">
-          <button class="subnavbtn">Religion</button>
-          <div class="subnav-content">
-            <a href="#r2">200s</a>
-            <a href="#r3">300s</a>
-            <a href="#r4">400s</a>
-            <a href="#r5">500s</a>
-            <a href="#ro">Others</a>
-          </div>
-        </div>
-
-        <div class="subnav">
-          <button class="subnavbtn">Science</button>
-          <div class="subnav-content">
-            <a href="#sbio">Biology</a>
-            <a href="#schem">Chemestry</a>
-            <a href="#sphy">Physics</a>
-            <a href="#scs">CompSci</a>
-          </div>
+      <div class="RatePEA">
+        <a class = "active" href="#RatePEA">RatePEA</a>
+      </div>
+      
+      <div class="subnav">
+        <button class="subnavbtn">Art</button>
+        <div class="subnav-content">
+            <a href="#a2">200s</a>
+            <a href="#a3">300s</a>
+            <a href="#a4">400s</a>
+            <a href="#a5">500s</a>
+            <a href="#ao">Others</a>
         </div>
       </div>
 
+      <div class="subnav">
+        <button class="subnavbtn">English</button>
+        <div class="subnav-content">
+          <a href="#eg">General</a>
+          <a href="#ee">Electives</a>
+        </div>
+      </div>
+
+      <div class="subnav">
+        <button class="subnavbtn">History</button>
+        <div class="subnav-content">
+            <a href="#h2">200s</a>
+            <a href="#h3">300s</a>
+            <a href="#hus">US History</a>
+            <a href="#h5">500s</a>
+            <a href="#ho">Others</a>
+        </div>
+      </div>
+
+      <div class="subnav">
+        <button class="subnavbtn">Langauge</i></button>
+        <div class="subnav-content">
+          <a href="#lspa">Spanish</a>
+          <a href="#lfre">French</a>
+          <a href="#lman">Chinese</a>
+          <a href="#lger">German</a>
+          <a href="#ljap">Japanese</a>
+          <a href="#lrus">Russian</a>
+          <a href="#lita">Italian</a>
+          <a href="#lara">Arabic</a>
+          <a href="#llat">Latin</a>
+          <a href="#lgre">Classical Greek</a>
+        </div>
+      </div>
+
+      <div class="subnav">
+        <button class="subnavbtn">Math</button>
+        <div class="subnav-content">
+          <a href="#m1">100s</a>
+          <a href="#m2">200s</a>
+          <a href="#m3">300s</a>
+          <a href="#m4">400s</a>
+          <a href="#m5">500s</a>
+          <a href="#me">Electives</a>
+        </div>
+      </div>
+
+      <div class="subnav">
+        <button class="subnavbtn">Religion</button>
+        <div class="subnav-content">
+          <a href="#r2">200s</a>
+          <a href="#r3">300s</a>
+          <a href="#r4">400s</a>
+          <a href="#r5">500s</a>
+          <a href="#ro">Others</a>
+        </div>
+      </div>
+
+      <div class="subnav">
+        <button class="subnavbtn">Science</button>
+        <div class="subnav-content">
+          <a href="#sbio">Biology</a>
+          <a href="#schem">Chemestry</a>
+          <a href="#sphy">Physics</a>
+          <a href="#scs">CompSci</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Course Info -->
+    <!-- I'm not sure how we are going to be able to plug in the actual data here, I'm just putting text as a filler-->
     <body>
-        <h1>
-            Course
-        </h1>
+        <h2>
+          Course Number: Coursename
+        </h2>
+        <h4>
+          Rating: xxxxx
+        </h4>
     </body>
+    <!-- Table containing term offered, prereqs, and teacher -->
+    <table>
+      <tr>
+        <th>
+          <h5>
+            Offered: xxx Term
+          </h5>
+        </th>
+        <th>
+          <h5>
+            Prereqs: x,y,z
+          </h5>
+        </th>
+        <th>
+          <h5>
+            Taught by: xxx
+          </h5>
+        </th>
+      </tr>
+    </table>
+    <br>
+    <!-- Table contaning syllabus (idk how easy these will be to find) -->
+    <table> 
+      <tr>
+        <th>
+          <h5>
+            Syllabus:
+          </h5>  
+        </th>
+      </tr>
+    </table>
+    <br>
+    <!-- Table containing all the user posts -->
+    <table>
+      <tr>
+        <th>
+          <h5>
+            Posts go here
+          </h5>        
+        </th>
+      </tr>
+    </table>
 </html>
