--- a/course.html
+++ b/course.html
@@ -6,6 +6,12 @@
             <title>
                 Course
             </title>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+            <style>
+            .checked {
+              color: orange;
+            }
+            </style>
     </head>
 
     <!-- Navbar stuff: Same on all tabs -->
@@ -101,8 +107,13 @@
           Course Number: Coursename
         </h2>
         <h4>
-          Rating: xxxxx
+          Rating:
         </h4>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+        <span class="fa fa-star"></span>
     </body>
     <!-- Table containing term offered, prereqs, and teacher -->
     <table>
