--- a/course.html
+++ b/course.html
@@ -107,46 +107,18 @@
           Course Number: Coursename
         </h2>
         <h4>
-          Rating:
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
+            Rating:
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>         
+          <br>
+          Subject: xxx
+          <br>
+          Description: xxx
         </h4>
     </body>
-    <!-- Table containing term offered, prereqs, and teacher -->
-    <table>
-      <tr>
-        <th>
-          <h5>
-            Offered: xxx Term
-          </h5>
-        </th>
-        <th>
-          <h5>
-            Prereqs: x,y,z
-          </h5>
-        </th>
-        <th>
-          <h5>
-            Taught by: xxx
-          </h5>
-        </th>
-      </tr>
-    </table>
-    <br>
-    <!-- Table contaning syllabus (idk how easy these will be to find) -->
-    <table> 
-      <tr>
-        <th>
-          <h5>
-            Syllabus:
-          </h5>  
-        </th>
-      </tr>
-    </table>
-    <br>
     <!-- Table containing all the user posts -->
     <table>
       <tr>
